--- a/frontend/Accueil.html
+++ b/frontend/Accueil.html
@@ -19,6 +19,8 @@
 				<a href="http://localhost/page?url=Reservation"><img src="https://img.icons8.com/metro/26/000000/literature.png" height="20px">Réservation</a>
 				<a href="http://localhost/page?url=Activitees"><img src="https://img.icons8.com/metro/26/000000/phone.png" height="20px">Activitées</a>
 				<a href="http://localhost/page?url=Restaurant"><img src="https://img.icons8.com/metro/26/000000/phone.png" height="20px">Restaurant</a>
+		    		<a href="http://localhost/page?url=restaurant"><img src="https://img.icons8.com/android/24/000000/restaurant.png" height="20px">Restaurant</a>
+
             </h2>
 
         </nav>
