--- a/frontend/Reservation.html
+++ b/frontend/Reservation.html
@@ -15,7 +15,7 @@
         <a href="http://localhost/page?url=Chambres"><img src="https://img.icons8.com/ios-filled/50/000000/bed.png" height="20px"> Chambres</a>
         <a href="http://localhost/page?url=Reservation"><img src="https://img.icons8.com/metro/26/000000/literature.png" height="20px"> Réservation</a>
         <a href="http://localhost/page?url=Activitees"><img src="https://img.icons8.com/metro/26/000000/phone.png" height="20px"> Activitées</a>
-		<a href="http://localhost/page?url=Restaurant"><img src="https://img.icons8.com/metro/26/000000/phone.png" height="20px"> Restaurant</a>
+        <a href="http://localhost/page?url=restaurant"><img src="https://img.icons8.com/android/24/000000/restaurant.png" height="20px">Restaurant</a>
     </h2>
 </nav>
 
