--- a/frontend/Restaurant.html
+++ b/frontend/Restaurant.html
@@ -53,18 +53,20 @@
 <form class="formRestaurant" id="formResto" onSubmit='resaResto();'>                                                                                           <!--Formulaire de réservation-->
     <fieldset>
         <legend><h2>Formulaire de réservation</h2></legend>
-    <label for="name">Nom</label>
+        <label for="name">Nom</label>
         <input type="text" name="name" id="name" required> <br> <br>
 
-    <label for="prenom">Prenom</label>
+        <label for="prenom">Prenom</label>
         <input type="text" name="prenom" id="firstName" required> <br> <br>
 
         <label for="dateResto"> date souhaitée</label>
         <input type="date"  name="dateResto" id="dateResto" min="2020-15-10"  required>
 
         <label for="nombrePersonne"> Nombre de personnes </label>
-        <input  name="personne" type="number" id="nbpersonnes" min = 1 step = 1 max= 20 required>
+        <input  name="personne" type="number" id="nbpersonnes" min = 1 step = 1 max= 20 required> <br> <br>
 
+        <label for="Chambre">si vous sejournez dans notre hotel veuillez introduire l'ID de votre chambre:</label> <br>
+        <input type="text"  maxlength="5" name="idChambre" id="idChambre" > <br> <br>
 
    
         
